--- a/frontend_react/src/container/Header/Header.scss
+++ b/frontend_react/src/container/Header/Header.scss
@@ -48,7 +48,7 @@
   margin: 0 2rem;
 
   position: absolute;
-  z-index: 3;
+  z-index: 1;
 
   h1 {
     font-size: 12rem;
